kustomize/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: brezgreha
spec:
  selector:
    app: brezgreha
  ports:
    - protocol: TCP
      port: 80
